# nomadic

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  util.py  visualization.py
.github/workflows/: nomadic_sdk_build_test_publish.yml
client/: __init__.py  base.py  http_client.py
client/resources/: __init__.py  api_resource.py  experiment_results.py  experiments.py  models.py  utils.py
cookbooks/: Advanced_RAG_Optimization_Retrieval_&_Inferencing_Stages.ipynb  Advanced_RAG_Optimization_Retrieval_&_Inferencing_Stages.py  Jailbreaking_Models_Through_Nomadic.ipynb  Nomadic_Platform_Financial_Data.html  Nomadic_Prompt_Optimization_Report.html  Optimizing_Financial_Data_Nomadic.html  README.md  interactive_visualization.html  parameter_impact_analysis.html  parameter_impact_visualization.html
coookbooks/: Supervised_Hallucinations (2).ipynb
dev/: build_dev_env.sh  clean_dev_env.sh  install_nodejs.sh  run_all_lints.sh  run_all_unit_tests.sh
docs/: mint.json
docs/api-reference/: evaluation-dataset.mdx  experiment.mdx  model.mdx  result.mdx  tuner.mdx
docs/essentials/: settings.mdx
docs/features/: continuous_optimization.mdx  evaluations.mdx  experiments.mdx  hpo-tuning.mdx  observability.mdx  prompt-optimizer.mdx  system-hpo-tuning.mdx
docs/get-started/: cookbooks.mdx  quickstart.mdx
docs/introduction/: concept-overview.mdx  intro-to-nomadic.mdx  what-is-nomadic.mdx
docs/more/: privacy_policy.mdx  terms_of_service.mdx
experiment/: __init__.py  base.py  experiment.py  prompt_tuning.py  rag.py  utils.py
model/: __init__.py  base.py  model.py
nomadic/: visualization.py
nomadic/attack_models/: AISafetyExperiment (1).ipynb  ai_safety_experiment.py  evaluators.py  iris_algorithm.py  rl_agent.py  tap_algorithm.py
nomadic/client/: __init__.py  base.py
nomadic/client/resources/: experiment_results.py  experiments.py
nomadic/dataset/: __init__.py  base.py  sample_experiment_with_live_dataset.py
nomadic/experiment/: __init__.py  base.py  prompt_tuning.py  rag.py  utils.py
nomadic/experiment/helpers/: __init__.py  base_evaluator.py  base_prompt_constructor.py  base_response_manager.py  base_result_manager.py  base_setup.py
nomadic/model/: __init__.py  base.py
nomadic/recipes/ai_safety/: abstract_attack_logic.py  ai_safety_experiment.py  evaluators.py  iris_algorithm.py  language_models.py  (+3 more)
nomadic/result/: __init__.py  base.py
nomadic/tuner/: __init__.py  base.py
nomadic/utils/: utilities.py
nomadic/visualization/: base_visualization.py  rl_visualization.py
result/: __init__.py  base.py
samples/llm_pipeline/: hpo_llm_pipeline_rag.ipynb  hpo_llm_pipeline_rag.py  requirements.txt
tune/: tuner.py  utils.py
tuner/: __init__.py  base.py
tuner/flaml/: __init__.py  base.py
tuner/ray/: __init__.py  base.py
tuner/tap/: base.py
(+17 files in other folders)
