[build-system]
requires = ["poetry-core>=1.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words-list = "astroid,gallary,momento,narl,ot,rouge"
skip = "./nomadic/core/_static,./examples,./experimental,*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.mypy]
disallow_untyped_defs = true
exclude = ["_static", "build", "examples", "notebooks", ".venv"]
ignore_missing_imports = true
python_version = "3.8.12"

[tool.poetry]
name = "nomadic"
version = "0.0.1.3"
description = "Coming soon"
authors = ["Mustafa Bal <mustafa@nomadicml.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
maintainers = [
    "Mustafa Bal <mustafa@nomadicml.com>",
    "Varun Krishnan <varun@nomadicml.com>",
    "Elizabeth Hu <elizabeth@nomadicml.com>",
]
keywords = ["LLM", "HPO", "data", "devtools", "optimization", "backtesting"]
readme = "README.md"
packages = [{include="nomadic"}]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^2.7.1"
poetry-plugin-dotenv = "*"
pandas = "^2.0.3"
ray = {extras = ["tune"], version = "^2.35.0"}
llama-index = "^0.10.68"
llama-index-llms-sagemaker-endpoint = "^0.1.3"
llama-index-llms-together = "^0.1.3"
llama-index-llms-vllm = "^0.1.9"
flaml = "^1.2.0"
matplotlib = "^3.7.5"
optuna = "^3.6.1"
seaborn = "^0.13.2"
scipy = "^1.10.1"
numpy = "^1.24.4"

[tool.poetry.group.dev.dependencies]
requests = "*"
altair = "^4.2.2"
bs4 = "*"
pymupdf = "*"
nest_asyncio = "*"
openai = "*"
pytest = "^7.4"
pytest-sugar = "*"
pytest-cov = "*"
black = {extras = ["jupyter"], version = "*"}
mypy = "*"
ruff = "*"
isort = "*"
debugpy = "^1.8.1"
watchdog = "^4.0.0"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
pre-commit = "^3.5.0"
codespell = {extras = ["toml"], version = "*"}
scikit-learn = "^1.3.2"
supabase = "^2.4.6"
flake8 = "7.1.0"
python-dotenv = "^1.0.1"
pytest-dotenv = "^0.5.2"

[tool.poetry.group.streamlit]
optional = false

[tool.poetry.group.streamlit.dependencies]
streamlit = "*"
llama-hub = "*"
llama-index-embeddings-openai = "*"
llama-index-experimental = "*"

[tool.poetry.group.pilots]
optional = false

[tool.poetry.group.pilots.dependencies]
boto3 = "*"
sagemaker = "*"
tritonclient = "^2.36.0"

[tool.ruff]
exclude = [
    "examples",
    "pilots",
]
ignore = [
    "COM812",
    "D212",
    "D417",
    "F541",
    "TCH002",
    "UP006",
    "UP007",
]
target-version = "py38"
unfixable = [
    "ERA001",
]
